# pytest-vcr-delete-on-fail

./: .gitignore  README.md  README.rst  api.html  class_workflow.html  context_managers.html  full_readme.html  genindex.html  index.html  installation.html  integration.html  marker.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sonar-project.properties  tasks.py
.github/workflows/: deploy.yml  dev.yml  docs.yaml  prod.yml
_sources/: api.rst.txt  class_workflow.rst.txt  full_readme.rst.txt  installation.rst.txt  integration.rst.txt
docs/source/: conf.py  context_managers.rst  index.rst  installation.rst  marker.rst
pytest_vcr_delete_on_fail/: __init__.py  main.py
tests/: conftest.py  conftest_deprecated.py  test_conftest.py  test_delete_on_block.py  test_delete_on_single_test.py  test_delete_on_single_test_old.py  test_delete_on_test_collections.py  test_integrations.py  test_test_module.py
vcrpy_delete_on_fail/: __init__.py  delete.py
