[tool.poetry]
name = "pytest-vcr-delete-on-fail"
version = "1.1.0"
description = "A pytest plugin that automates vcrpy cassettes deletion on test failure."

license = "GPL-3.0-only"

authors = [
  "Carlo De Pieri <depieri.carlo@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/CarloDePieri/pytest-vcr-delete-on-fail"
homepage = "https://github.com/CarloDePieri/pytest-vcr-delete-on-fail"

packages = [
  { include = "pytest_vcr_delete_on_fail" }
]

keywords = ["pytest", "vcr", "testing", "vcrpy", "fail", "delete"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
coveralls = "^3.0.1"
pytest-cov = "^2.11.1"
pytest-recording = "^0.11.0"
pytest-sugar = "^0.9.4"
pytest-spec = "^3.1.0"
vcrpy-encrypt = "^0.9.1"
invoke = "^1.6.0"
pytest-order = "^1.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"vcr_delete_on_fail" = "pytest_vcr_delete_on_fail.main"
