[tool.poetry]
name = "pytest-vcr-delete-on-fail"
version = "2.0.1"
description = "A pytest plugin that automates vcrpy cassettes deletion on test failure."

license = "GPL-3.0-only"

authors = [
  "Carlo De Pieri <depieri.carlo@gmail.com>"
]

readme = 'README.rst'

repository = "https://github.com/CarloDePieri/pytest-vcr-delete-on-fail"
homepage = "https://github.com/CarloDePieri/pytest-vcr-delete-on-fail"
documentation = "https://carlodepieri.github.io/pytest-vcr-delete-on-fail"

packages = [
  { include = "pytest_vcr_delete_on_fail" }
]

keywords = ["pytest", "vcr", "testing", "vcrpy", "fail", "delete"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8.1"
pytest = "^8.0.0"

[tool.poetry.dev-dependencies]
requests = "^2.31.0"
coveralls = "^3.3.1"
pytest-cov = "^4.1.0"
pytest-recording = "^0.13.1"
pytest-sugar = "^1.0.0"
vcrpy-encrypt = "^0.9.2"
invoke = "^2.2.0"
pytest-order = "^1.2.0"
black = "^24.2.0"
pytest-httpserver = "^1.0.9"
# This is only needed to use the remote debugger in idea/pycharm
pydevd-pycharm = {version = "^241.12662.44", optional = true}
mypy = "^1.8.0"
# This is the last one supporting python 3.8, which is still EOL
Sphinx = "==7.1.2"
sphinx-rtd-theme = "^2.0.0"
livereload = "^2.6.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"vcr_delete_on_fail" = "pytest_vcr_delete_on_fail.main"
